[package]
name = "libsla"
description = "Rust bindings to Ghidra Sleigh library libsla"
version = "0.4.3"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/mnemonikr/libsla"

[features]
fuzzing = ["libsla-sys/fuzzing"]

[dependencies]
thiserror = "2.0"
libsla-sys = { version = "0.1.4" }

[dev-dependencies]
flate2 = "1.1"
sleigh-config = { version = "0.1", features = ["x86"] }
